// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column no data render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Column
    btnLeft="btnLeft"
    btnRight="btnRight"
    currentPosition="currentPosition"
    data={Array []}
    filter="first"
    filterBy="name"
    handleBtnClick={[Function]}
    title="title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <header
          className="c-column__header"
        >
          <h2
            className="c-column__title"
          >
            title
          </h2>
        </header>,
        <section
          className="c-column__body"
        />,
      ],
      "className": "c-column",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h2
            className="c-column__title"
          >
            title
          </h2>,
          "className": "c-column__header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "title",
            "className": "c-column__title",
          },
          "ref": null,
          "rendered": "title",
          "type": "h2",
        },
        "type": "header",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": null,
          "className": "c-column__body",
        },
        "ref": null,
        "rendered": null,
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <header
            className="c-column__header"
          >
            <h2
              className="c-column__title"
            >
              title
            </h2>
          </header>,
          <section
            className="c-column__body"
          />,
        ],
        "className": "c-column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2
              className="c-column__title"
            >
              title
            </h2>,
            "className": "c-column__header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "title",
              "className": "c-column__title",
            },
            "ref": null,
            "rendered": "title",
            "type": "h2",
          },
          "type": "header",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": null,
            "className": "c-column__body",
          },
          "ref": null,
          "rendered": null,
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Column should render correctly with 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Column
    btnLeft="btnLeft"
    btnRight="btnRight"
    currentPosition="currentPosition"
    data={
      Array [
        Object {
          "location": Object {
            "city": "city",
          },
          "login": Object {
            "uuid": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
          },
          "name": Object {
            "first": "firstName0",
            "last": "lastName0",
          },
          "picture": Object {
            "thumbnail": "thumbnail",
          },
        },
      ]
    }
    filter=""
    filterBy=""
    handleBtnClick={[Function]}
    title="title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <header
          className="c-column__header"
        >
          <h2
            className="c-column__title"
          >
            title
          </h2>
        </header>,
        <section
          className="c-column__body"
        >
          <Card
            btnLeft="btnLeft"
            btnRight="btnRight"
            currentPosition="currentPosition"
            handleBtnClick={[Function]}
            id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
            img="thumbnail"
            location="city"
            name="firstName0 lastName0"
          />
        </section>,
      ],
      "className": "c-column",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h2
            className="c-column__title"
          >
            title
          </h2>,
          "className": "c-column__header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "title",
            "className": "c-column__title",
          },
          "ref": null,
          "rendered": "title",
          "type": "h2",
        },
        "type": "header",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Card
              btnLeft="btnLeft"
              btnRight="btnRight"
              currentPosition="currentPosition"
              handleBtnClick={[Function]}
              id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
              img="thumbnail"
              location="city"
              name="firstName0 lastName0"
            />,
          ],
          "className": "c-column__body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
            "nodeType": "class",
            "props": Object {
              "btnLeft": "btnLeft",
              "btnRight": "btnRight",
              "currentPosition": "currentPosition",
              "handleBtnClick": [Function],
              "id": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
              "img": "thumbnail",
              "location": "city",
              "name": "firstName0 lastName0",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <header
            className="c-column__header"
          >
            <h2
              className="c-column__title"
            >
              title
            </h2>
          </header>,
          <section
            className="c-column__body"
          >
            <Card
              btnLeft="btnLeft"
              btnRight="btnRight"
              currentPosition="currentPosition"
              handleBtnClick={[Function]}
              id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
              img="thumbnail"
              location="city"
              name="firstName0 lastName0"
            />
          </section>,
        ],
        "className": "c-column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2
              className="c-column__title"
            >
              title
            </h2>,
            "className": "c-column__header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "title",
              "className": "c-column__title",
            },
            "ref": null,
            "rendered": "title",
            "type": "h2",
          },
          "type": "header",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Card
                btnLeft="btnLeft"
                btnRight="btnRight"
                currentPosition="currentPosition"
                handleBtnClick={[Function]}
                id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
                img="thumbnail"
                location="city"
                name="firstName0 lastName0"
              />,
            ],
            "className": "c-column__body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
              "nodeType": "class",
              "props": Object {
                "btnLeft": "btnLeft",
                "btnRight": "btnRight",
                "currentPosition": "currentPosition",
                "handleBtnClick": [Function],
                "id": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
                "img": "thumbnail",
                "location": "city",
                "name": "firstName0 lastName0",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Column should render correctly with city filter 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Column
    btnLeft="btnLeft"
    btnRight="btnRight"
    currentPosition="currentPosition"
    data={
      Array [
        Object {
          "location": Object {
            "city": "city",
          },
          "login": Object {
            "uuid": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
          },
          "name": Object {
            "first": "firstName0",
            "last": "lastName0",
          },
          "picture": Object {
            "thumbnail": "thumbnail",
          },
        },
      ]
    }
    filter="city"
    filterBy="city"
    handleBtnClick={[Function]}
    title="title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <header
          className="c-column__header"
        >
          <h2
            className="c-column__title"
          >
            title
          </h2>
        </header>,
        <section
          className="c-column__body"
        >
          <Card
            btnLeft="btnLeft"
            btnRight="btnRight"
            currentPosition="currentPosition"
            handleBtnClick={[Function]}
            id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
            img="thumbnail"
            location="city"
            name="firstName0 lastName0"
          />
        </section>,
      ],
      "className": "c-column",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h2
            className="c-column__title"
          >
            title
          </h2>,
          "className": "c-column__header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "title",
            "className": "c-column__title",
          },
          "ref": null,
          "rendered": "title",
          "type": "h2",
        },
        "type": "header",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Card
              btnLeft="btnLeft"
              btnRight="btnRight"
              currentPosition="currentPosition"
              handleBtnClick={[Function]}
              id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
              img="thumbnail"
              location="city"
              name="firstName0 lastName0"
            />,
          ],
          "className": "c-column__body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
            "nodeType": "class",
            "props": Object {
              "btnLeft": "btnLeft",
              "btnRight": "btnRight",
              "currentPosition": "currentPosition",
              "handleBtnClick": [Function],
              "id": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
              "img": "thumbnail",
              "location": "city",
              "name": "firstName0 lastName0",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <header
            className="c-column__header"
          >
            <h2
              className="c-column__title"
            >
              title
            </h2>
          </header>,
          <section
            className="c-column__body"
          >
            <Card
              btnLeft="btnLeft"
              btnRight="btnRight"
              currentPosition="currentPosition"
              handleBtnClick={[Function]}
              id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
              img="thumbnail"
              location="city"
              name="firstName0 lastName0"
            />
          </section>,
        ],
        "className": "c-column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2
              className="c-column__title"
            >
              title
            </h2>,
            "className": "c-column__header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "title",
              "className": "c-column__title",
            },
            "ref": null,
            "rendered": "title",
            "type": "h2",
          },
          "type": "header",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Card
                btnLeft="btnLeft"
                btnRight="btnRight"
                currentPosition="currentPosition"
                handleBtnClick={[Function]}
                id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
                img="thumbnail"
                location="city"
                name="firstName0 lastName0"
              />,
            ],
            "className": "c-column__body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
              "nodeType": "class",
              "props": Object {
                "btnLeft": "btnLeft",
                "btnRight": "btnRight",
                "currentPosition": "currentPosition",
                "handleBtnClick": [Function],
                "id": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
                "img": "thumbnail",
                "location": "city",
                "name": "firstName0 lastName0",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Column should render correctly with name filter 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Column
    btnLeft="btnLeft"
    btnRight="btnRight"
    currentPosition="currentPosition"
    data={
      Array [
        Object {
          "location": Object {
            "city": "city",
          },
          "login": Object {
            "uuid": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
          },
          "name": Object {
            "first": "firstName0",
            "last": "lastName0",
          },
          "picture": Object {
            "thumbnail": "thumbnail",
          },
        },
      ]
    }
    filter="first"
    filterBy="name"
    handleBtnClick={[Function]}
    title="title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <header
          className="c-column__header"
        >
          <h2
            className="c-column__title"
          >
            title
          </h2>
        </header>,
        <section
          className="c-column__body"
        >
          <Card
            btnLeft="btnLeft"
            btnRight="btnRight"
            currentPosition="currentPosition"
            handleBtnClick={[Function]}
            id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
            img="thumbnail"
            location="city"
            name="firstName0 lastName0"
          />
        </section>,
      ],
      "className": "c-column",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h2
            className="c-column__title"
          >
            title
          </h2>,
          "className": "c-column__header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "title",
            "className": "c-column__title",
          },
          "ref": null,
          "rendered": "title",
          "type": "h2",
        },
        "type": "header",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Card
              btnLeft="btnLeft"
              btnRight="btnRight"
              currentPosition="currentPosition"
              handleBtnClick={[Function]}
              id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
              img="thumbnail"
              location="city"
              name="firstName0 lastName0"
            />,
          ],
          "className": "c-column__body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
            "nodeType": "class",
            "props": Object {
              "btnLeft": "btnLeft",
              "btnRight": "btnRight",
              "currentPosition": "currentPosition",
              "handleBtnClick": [Function],
              "id": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
              "img": "thumbnail",
              "location": "city",
              "name": "firstName0 lastName0",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <header
            className="c-column__header"
          >
            <h2
              className="c-column__title"
            >
              title
            </h2>
          </header>,
          <section
            className="c-column__body"
          >
            <Card
              btnLeft="btnLeft"
              btnRight="btnRight"
              currentPosition="currentPosition"
              handleBtnClick={[Function]}
              id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
              img="thumbnail"
              location="city"
              name="firstName0 lastName0"
            />
          </section>,
        ],
        "className": "c-column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2
              className="c-column__title"
            >
              title
            </h2>,
            "className": "c-column__header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "title",
              "className": "c-column__title",
            },
            "ref": null,
            "rendered": "title",
            "type": "h2",
          },
          "type": "header",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Card
                btnLeft="btnLeft"
                btnRight="btnRight"
                currentPosition="currentPosition"
                handleBtnClick={[Function]}
                id="0a985e0b-9383-43d7-bcf3-f8b8f597451e0"
                img="thumbnail"
                location="city"
                name="firstName0 lastName0"
              />,
            ],
            "className": "c-column__body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
              "nodeType": "class",
              "props": Object {
                "btnLeft": "btnLeft",
                "btnRight": "btnRight",
                "currentPosition": "currentPosition",
                "handleBtnClick": [Function],
                "id": "0a985e0b-9383-43d7-bcf3-f8b8f597451e0",
                "img": "thumbnail",
                "location": "city",
                "name": "firstName0 lastName0",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
